--- a/user-profile.html
+++ b/user-profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
 <meta charset="utf-8">
 <title>FiTMAPPED - User Profile Dev</title>
@@ -9,7 +9,8 @@
 <link rel='stylesheet' href='css/fullcalendar.css' />
 
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src='jquery/jquery-ui-1.10.3.custom.min.js'></script>
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src='js/modernizr.js'></script>
 
 </head>
 <body>
