--- a/user-profile.html
+++ b/user-profile.html
@@ -9,7 +9,7 @@
 <link rel='stylesheet' href='css/fullcalendar.css' />
 
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="js/jquery-ui-1.10.3.custom.min.js"></script>
 <script src='js/modernizr.js'></script>
 
 </head>
