Input on/change action additions.  Adds friend search input.

--- a/user-ctrl-workout.html
+++ b/user-ctrl-workout.html
@@ -39,6 +39,7 @@
 
 				<div class="invite-friends mod">
 					<h4>Invite Friends</h4>
+					<input type="text" placeholder="Find friends" />
 				</div>
 
 				<div class="friends mod">
@@ -78,7 +79,7 @@
 					<div class="form-row">
 						<label>Workout Title</label>
 						<div class="col-4-4">
-							<input type="text" />
+							<input type="text" placeholder="Enter a title for your workout"/>
 						</div>
 					</div>
 					<div class="form-row">
@@ -134,7 +135,7 @@
 					<div class="form-row">
 						<label>Location</label>
 						<div class="col-4-4">
-							<input type="text" />
+							<input type="text" placeholder="Where are you working out?"/>
 						</div>
 					</div>
 					<div class="form-row">
