removes old comments

--- a/user-ctrl-workout.html
+++ b/user-ctrl-workout.html
@@ -32,9 +32,9 @@
 		</div>
 	</header>
 
-	<div class="user-ctrl-content"> <!--Main Content Area-->
+	<div class="user-ctrl-content">
 
-		<aside>	<!--Sidebar-->
+		<aside>
 			<div class="left-panel">
 
 				<div class="invite-friends mod">
@@ -69,9 +69,9 @@
 				</div>
 
 			</div>
-		</aside> <!--End Sidebar-->
+		</aside>
 
-		<section class="user-workout"> <!--Stream-->
+		<section class="user-workout">
 			<div class="content user-ctrl-workout">
 
 				<h4>Create Workout</h4>
@@ -204,11 +204,11 @@
 				</form>
 
 			</div>
-		</section> <!--End Stream-->
+		</section>
 
-	</div> <!--End Main Content Area-->
+	</div>
 
-</div> <!--End Container-->
+</div>
 
 <script src='js/base.js'></script>
 
