Fixes icon weights across profile and ctrl panel.  Changes universal fonts

--- a/user-ctrl-workout.html
+++ b/user-ctrl-workout.html
@@ -20,13 +20,13 @@
 			<h2 class="user-name">Eleanor Roosevelt</h2>
 			<nav>
 				<ul class="user-ctrl-nav">
-					<li><a href="#" class="icon" title="My Home">&#xf015;</a></li>
-					<li><a href="#" class="icon" title="My Settings">&#xf013;</a></li>
-					<li><a href="#" class="icon" title="My Badges">&#xf0a3;</a></li>
-					<li><a href="#" class="icon active" title="My Calendar">&#xf073;</a></li>
-					<li><a href="#" class="icon" title="My Places">&#xf005;</a></li>
-					<li><a href="#" class="icon" title="My Friends">&#xf0c0;</a></li>
-					<li><a href="#" class="icon" title="My Reviews">&#xf040;</a></li>
+					<li><a href="#" title="My Home"><i class="icon icon-home"></i></a></li>
+					<li><a href="#" title="My Settings"><i class="icon icon-cog"></i></a></li>
+					<li><a href="#" title="My Badges"><i class="icon icon-certificate"></i></a></li>
+					<li><a href="#" class="active" title="My Calendar"><i class="icon icon-calendar"></i></a></li>
+					<li><a href="#" title="My Places"><i class="icon icon-star"></i></a></li>
+					<li><a href="#" title="My Friends"><i class="icon icon-group"></i></a></li>
+					<li><a href="#" title="My Reviews"><i class="icon icon-pencil"></i></a></li>
 				</ul>
 			</nav>
 		</div>
