--- a/user-profile.html
+++ b/user-profile.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="css/user-profile.css">
 <link rel='stylesheet' href='css/theme.css' />
 <link rel='stylesheet' href='css/fullcalendar.css' />
+<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet'>
+<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
@@ -22,7 +24,7 @@
 		<div class="left-panel-user">
 			<div class="user-avatar">
 				<div class="user-img">
-					<a class="add-friend-btn icon">&#xf055;</a>
+					<a class="add-friend-btn"><i class="icon icon-plus-sign"></i></a>
 					<img src="img/profile-image.jpg" />
 				</div>
 				<div class="user-score">
@@ -32,12 +34,12 @@
 			</div>
 
 			<ul class="user-nav">
-				<li><a href="#about"><span class="user-nav-icon icon">&#xf05a;</span> About</a></li>
-				<li><a href="#cal"><span class="user-nav-icon icon">&#xf073;</span> Calendar</a></li>
-				<li><a href="#badges"><span class="user-nav-icon icon">&#xf024;</span> Badges</a></li>
-				<li><a href="#places"><span class="user-nav-icon icon">&#xf005;</span> Places</a></li>
-				<li><a href="#friends"><span class="user-nav-icon icon">&#xf0c0;</span> Friends</a></li>
-				<li><a href="#reviews"><span class="user-nav-icon icon">&#xf040;</span> Reviews</a></li>
+				<li><a href="#about"><i class="user-nav-icon icon icon-info-sign"></i><span class="user-nav-name">About</span></a></li>
+				<li><a href="#cal"><i class="user-nav-icon icon icon-calendar"></i> Calendar</a></li>
+				<li><a href="#badges"><i class="user-nav-icon icon icon-certificate"></i> Badges</a></li>
+				<li><a href="#places"><i class="user-nav-icon icon icon-star"></i> Places</a></li>
+				<li><a href="#friends"><i class="user-nav-icon icon icon-group"></i> Friends</a></li>
+				<li><a href="#reviews"><i class="user-nav-icon icon-pencil"></i> Reviews</a></li>
 			</ul>
 		</div>
 
@@ -146,10 +148,10 @@
 							<p><span class="place-name">As One</span>
 							196 Kent Avenue &#149; Brooklyn, New York 11249 &#149; 718-208-1300</p>
 							<ul class="place-actions">
-								<li><a href="">&#xf00c;</a></li>
-								<li><a href="">&#xf004;</a></li>
-								<li><a href="">&#xf005;</a></li>
-								<li><a href="">&#xf040;</a></li>
+								<li><a href=""><i class="icon icon-ok"></i></a></li>
+								<li><a href=""><i class="icon icon-heart"></i></a></li>
+								<li><a href=""><i class="icon icon-star"></i></a></li>
+								<li><a href=""><i class="icon icon-pencil"></i></a></li>
 							</ul>
 						</div>
 
@@ -158,10 +160,10 @@
 							<p><span class="place-name">As One</span>
 							196 Kent Avenue &#149; Brooklyn, New York 11249 &#149; 718-208-1300</p>
 							<ul class="place-actions">
-								<li><a href="">&#xf00c;</a></li>
-								<li><a href="">&#xf004;</a></li>
-								<li><a href="">&#xf005;</a></li>
-								<li><a href="">&#xf040;</a></li>
+								<li><a href=""><i class="icon icon-ok"></i></a></li>
+								<li><a href=""><i class="icon icon-heart"></i></a></li>
+								<li><a href=""><i class="icon icon-star"></i></a></li>
+								<li><a href=""><i class="icon icon-pencil"></i></a></li>
 							</ul>
 						</div>
 
@@ -170,10 +172,10 @@
 							<p><span class="place-name">As One</span>
 							196 Kent Avenue &#149; Brooklyn, New York 11249 &#149; 718-208-1300</p>
 							<ul class="place-actions">
-								<li><a href="">&#xf00c;</a></li>
-								<li><a href="">&#xf004;</a></li>
-								<li><a href="">&#xf005;</a></li>
-								<li><a href="">&#xf040;</a></li>
+								<li><a href=""><i class="icon icon-ok"></i></a></li>
+								<li><a href=""><i class="icon icon-heart"></i></a></li>
+								<li><a href=""><i class="icon icon-star"></i></a></li>
+								<li><a href=""><i class="icon icon-pencil"></i></a></li>
 							</ul>
 						</div>
 
@@ -190,10 +192,10 @@
 							<p><span class="place-name">As One</span>
 							196 Kent Avenue &#149; Brooklyn, New York 11249 &#149; 718-208-1300</p>
 							<ul class="place-actions">
-								<li><a href="">&#xf00c;</a></li>
-								<li><a href="">&#xf004;</a></li>
-								<li><a href="">&#xf005;</a></li>
-								<li><a href="">&#xf040;</a></li>
+								<li><a href=""><i class="icon icon-ok"></i></a></li>
+								<li><a href=""><i class="icon icon-heart"></i></a></li>
+								<li><a href=""><i class="icon icon-star"></i></a></li>
+								<li><a href=""><i class="icon icon-pencil"></i></a></li>
 							</ul>
 						</div>
 
@@ -202,10 +204,10 @@
 							<p><span class="place-name">As One</span>
 							196 Kent Avenue &#149; Brooklyn, New York 11249 &#149; 718-208-1300</p>
 							<ul class="place-actions">
-								<li><a href="">&#xf00c;</a></li>
-								<li><a href="">&#xf004;</a></li>
-								<li><a href="">&#xf005;</a></li>
-								<li><a href="">&#xf040;</a></li>
+								<li><a href=""><i class="icon icon-ok"></i></a></li>
+								<li><a href=""><i class="icon icon-heart"></i></a></li>
+								<li><a href=""><i class="icon icon-star"></i></a></li>
+								<li><a href=""><i class="icon icon-pencil"></i></a></li>
 							</ul>
 						</div>
 
@@ -214,10 +216,10 @@
 							<p><span class="place-name">As One</span>
 							196 Kent Avenue &#149; Brooklyn, New York 11249 &#149; 718-208-1300</p>
 							<ul class="place-actions">
-								<li><a href="">&#xf00c;</a></li>
-								<li><a href="">&#xf004;</a></li>
-								<li><a href="">&#xf005;</a></li>
-								<li><a href="">&#xf040;</a></li>
+								<li><a href=""><i class="icon icon-ok"></i></a></li>
+								<li><a href=""><i class="icon icon-heart"></i></a></li>
+								<li><a href=""><i class="icon icon-star"></i></a></li>
+								<li><a href=""><i class="icon icon-pencil"></i></a></li>
 							</ul>
 						</div>
 
@@ -234,10 +236,10 @@
 							<p><span class="place-name">As One</span>
 							196 Kent Avenue &#149; Brooklyn, New York 11249 &#149; 718-208-1300</p>
 							<ul class="place-actions">
-								<li><a href="">&#xf00c;</a></li>
-								<li><a href="">&#xf004;</a></li>
-								<li><a href="">&#xf005;</a></li>
-								<li><a href="">&#xf040;</a></li>
+								<li><a href=""><i class="icon icon-ok"></i></a></li>
+								<li><a href=""><i class="icon icon-heart"></i></a></li>
+								<li><a href=""><i class="icon icon-star"></i></a></li>
+								<li><a href=""><i class="icon icon-pencil"></i></a></li>
 							</ul>
 						</div>
 
@@ -246,10 +248,10 @@
 							<p><span class="place-name">As One</span>
 							196 Kent Avenue &#149; Brooklyn, New York 11249 &#149; 718-208-1300</p>
 							<ul class="place-actions">
-								<li><a href="">&#xf00c;</a></li>
-								<li><a href="">&#xf004;</a></li>
-								<li><a href="">&#xf005;</a></li>
-								<li><a href="">&#xf040;</a></li>
+								<li><a href=""><i class="icon icon-ok"></i></a></li>
+								<li><a href=""><i class="icon icon-heart"></i></a></li>
+								<li><a href=""><i class="icon icon-star"></i></a></li>
+								<li><a href=""><i class="icon icon-pencil"></i></a></li>
 							</ul>
 						</div>
 
@@ -258,10 +260,10 @@
 							<p><span class="place-name">As One</span>
 							196 Kent Avenue &#149; Brooklyn, New York 11249 &#149; 718-208-1300</p>
 							<ul class="place-actions">
-								<li><a href="">&#xf00c;</a></li>
-								<li><a href="">&#xf004;</a></li>
-								<li><a href="">&#xf005;</a></li>
-								<li><a href="">&#xf040;</a></li>
+								<li><a href=""><i class="icon icon-ok"></i></a></li>
+								<li><a href=""><i class="icon icon-heart"></i></a></li>
+								<li><a href=""><i class="icon icon-star"></i></a></li>
+								<li><a href=""><i class="icon icon-pencil"></i></a></li>
 							</ul>
 						</div>
 
