--- a/user-profile.html
+++ b/user-profile.html
@@ -139,7 +139,7 @@
 				<h4>Places</h4>
 
 				<div class="places">
-					<span class="places-icon icon">&#xf00c;<span>
+					<span class="places-icon"><i class="icon icon-ok"></i><span>
 					<h4 class="places-title">Where I Sweat</h4>
 					<div class="places--where">
 
@@ -183,7 +183,7 @@
 				</div>
 
 				<div class="places">
-					<span class="places-icon icon">&#xf004;<span>
+					<span class="places-icon"><i class="icon icon-heart"></i><span>
 					<h4 class="places-title">Favorites</h4>
 					<div class="places--favs">
 
@@ -227,7 +227,7 @@
 				</div>
 
 				<div class="places">
-					<span class="places-icon icon">&#xf005;<span>
+					<span class="places-icon"><i class="icon icon-star"></i><span>
 					<h4 class="places-title">Want To Go Here</h4>
 					<div class="places--wants">
 
@@ -282,42 +282,42 @@
 				<div class="friends">
 					<div class="friend-single">
 						<div class="friend-img">
-							<a class="add-friend-btn icon">&#xf055;</a>
+							<a class="add-friend-btn"><i class="icon icon-plus-sign"></i></a>
 							<img src="img/profile-image.jpg" />
 						</div>
 						<div class="friend-name">Friend Name</div>
 					</div>
 					<div class="friend-single">
 						<div class="friend-img">
-							<a class="add-friend-btn icon">&#xf055;</a>
+							<a class="add-friend-btn"><i class="icon icon-plus-sign"></i></a>
 							<img src="img/profile-image.jpg" />
 						</div>
 						<div class="friend-name">Friend Name</div>
 					</div>
 					<div class="friend-single">
 						<div class="friend-img">
-							<a class="add-friend-btn icon">&#xf055;</a>
+							<a class="add-friend-btn"><i class="icon icon-plus-sign"></i></a>
 							<img src="img/profile-image.jpg" />
 						</div>
 						<div class="friend-name">Friend Name</div>
 					</div>
 					<div class="friend-single">
 						<div class="friend-img">
-							<a class="add-friend-btn icon">&#xf055;</a>
+							<a class="add-friend-btn"><i class="icon icon-plus-sign"></i></a>
 							<img src="img/profile-image.jpg" />
 						</div>
 						<div class="friend-name">Friend Name</div>
 					</div>
 					<div class="friend-single">
 						<div class="friend-img">
-							<a class="add-friend-btn icon">&#xf055;</a>
+							<a class="add-friend-btn"><i class="icon icon-plus-sign"></i></a>
 							<img src="img/profile-image.jpg" />
 						</div>
 						<div class="friend-name">Friend Name</div>
 					</div>
 					<div class="friend-single">
 						<div class="friend-img">
-							<a class="add-friend-btn icon">&#xf055;</a>
+							<a class="add-friend-btn"><i class="icon icon-plus-sign"></i></a>
 							<img src="img/profile-image.jpg" />
 						</div>
 						<div class="friend-name">Friend Name</div>
