Fixes user ctrl icons, adjusts content padding

--- a/user-ctrl.html
+++ b/user-ctrl.html
@@ -2,13 +2,13 @@
 <html lang="en" class="no-js">
 <head>
 <meta charset="utf-8">
-<title>FiTMAPPED - User Ctrl Dev</title>
+<title>FiTMAPPED - User Ctrl</title>
 
 <link href="css/user-ctrl.css" rel="stylesheet" >
 <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet'>
+<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src='js/modernizr.js'></script>
-
 </head>
 <body>
 
@@ -19,13 +19,13 @@
 			<h2 class="user-name">Eleanor Roosevelt</h2>
 			<nav>
 				<ul class="user-ctrl-nav">
-					<li><a href="#" class="icon active" title="My Home">&#xf015;</a></li>
-					<li><a href="#" class="icon" title="My Settings">&#xf013;</a></li>
-					<li><a href="#" class="icon" title="My Badges">&#xf0a3;</a></li>
-					<li><a href="#" class="icon" title="My Calendar">&#xf073;</a></li>
-					<li><a href="#" class="icon" title="My Places">&#xf005;</a></li>
-					<li><a href="#" class="icon" title="My Friends">&#xf0c0;</a></li>
-					<li><a href="#" class="icon" title="My Reviews">&#xf040;</a></li>
+					<li><a href="#" class="active" title="My Home"><i class="icon icon-home"></i></a></li>
+					<li><a href="#" title="My Settings"><i class="icon icon-cog"></i></a></li>
+					<li><a href="#" title="My Badges"><i class="icon icon-certificate"></i></a></li>
+					<li><a href="#" title="My Calendar"><i class="icon icon-calendar"></i></a></li>
+					<li><a href="#" title="My Places"><i class="icon icon-star"></i></a></li>
+					<li><a href="#" title="My Friends"><i class="icon icon-group"></i></a></li>
+					<li><a href="#" title="My Reviews"><i class="icon icon-pencil"></i></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -47,7 +47,7 @@
 							<span class="time">1:00pm</span>
 							<span class="title">New York Sports Club (Union Square)</span>
 						</div>
-						<a href="#" class="icon edit">&#xf044;</a>
+						<a href="#" class="edit"><i class="icon icon-edit"></i></a>
 					</div>
 					<a href="#" class="mod-footlink">View Upcoming Events &raquo;</a>
 				</div>
@@ -86,43 +86,43 @@
 
 				<h4>My Stream</h4>
 				<div class="user-stream-single">
-					<span class="icon user-stream--type">&#xf073;</span>
+					<span class="user-stream--type"><i class="icon icon-calendar"></i></span>
 					<p class="user-stream--msg">Teddy Roosevelt has invited you to a workout on October 1st. <a href="#">Join the workout.</a></p>
 				</div>
 				<div class="user-stream-single">
-					<span class="icon user-stream--type">&#xf005;</span>
+					<span class="user-stream--type"><i class="icon icon-tag"></i></span>
 					<p class="user-stream--msg">Super Cycle has sent you a coupon. <a href="#">View the offer.</a></p>
 				</div>
 				<div class="user-stream-single">
-					<span class="icon user-stream--type">&#xf0a3;</span>
+					<span class="user-stream--type"><i class="icon icon-certificate"></i></span>
 					<p class="user-stream--msg">You have earned the Yoga badge. <a href="#">View Badges.</a></p>
 				</div>
 				<div class="user-stream-single">
-					<span class="icon user-stream--type">&#xf073;</span>
+					<span class="user-stream--type"><i class="icon icon-calendar"></i></span>
 					<p class="user-stream--msg">Teddy Roosevelt has invited you to a workout on October 1st. <a href="#">Join the workout.</a></p>
 				</div>
 				<div class="user-stream-single">
-					<span class="icon user-stream--type">&#xf005;</span>
+					<span class="user-stream--type"><i class="icon icon-tag"></i></span>
 					<p class="user-stream--msg">Super Cycle has sent you a coupon. <a href="#">View the offer.</a></p>
 				</div>
 				<div class="user-stream-single">
-					<span class="icon user-stream--type">&#xf005;</span>
+					<span class="user-stream--type"><i class="icon icon-tag"></i></span>
 					<p class="user-stream--msg">Super Cycle has sent you a coupon. <a href="#">View the offer.</a></p>
 				</div>
 				<div class="user-stream-single">
-					<span class="icon user-stream--type">&#xf0a3;</span>
+					<span class="user-stream--type"><i class="icon icon-certificate"></i></span>
 					<p class="user-stream--msg">You have earned the Yoga badge. <a href="#">View Badges.</a></p>
 				</div>
 				<div class="user-stream-single">
-					<span class="icon user-stream--type">&#xf073;</span>
+					<span class="user-stream--type"><i class="icon icon-calendar"></i></span>
 					<p class="user-stream--msg">Teddy Roosevelt has invited you to a workout on October 1st. <a href="#">Join the workout.</a></p>
 				</div>
 				<div class="user-stream-single">
-					<span class="icon user-stream--type">&#xf073;</span>
+					<span class="user-stream--type"><i class="icon icon-calendar"></i></span>
 					<p class="user-stream--msg">Teddy Roosevelt has invited you to a workout on October 1st. <a href="#">Join the workout.</a></p>
 				</div>
 				<div class="user-stream-single">
-					<span class="icon user-stream--type">&#xf005;</span>
+					<span class="user-stream--type"><i class="icon icon-tag"></i></span>
 					<p class="user-stream--msg">Super Cycle has sent you a coupon. <a href="#">View the offer.</a></p>
 				</div>
 
