--- a/user-profile.html
+++ b/user-profile.html
@@ -2,18 +2,16 @@
 <html lang="en" class="no-js">
 <head>
 <meta charset="utf-8">
-<title>FiTMAPPED - User Profile Dev</title>
+<title>FiTMAPPED - User Profile</title>
 
 <link rel="stylesheet" href="css/user-profile.css">
 <link rel='stylesheet' href='css/theme.css' />
 <link rel='stylesheet' href='css/fullcalendar.css' />
 <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet'>
 <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="js/jquery-ui-1.10.3.custom.min.js"></script>
 <script src='js/modernizr.js'></script>
-
 </head>
 <body>
 
